--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
+    implementation 'com.github.sillebille:dynamic-calendar:1.0.1'
 }
