--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 26
@@ -31,4 +32,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
     implementation 'com.github.sillebille:dynamic-calendar:1.0.1'
+    implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
 }
+
